# Burhan

./: .code-review-graphignore  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHECKPOINT_STATUS.md  ENDPOINT_VALIDATION_COMPLETE.md  MULTI_AGENT_COMPLETE.md  MULTI_AGENT_FINAL_REPORT.md  Makefile  PRODUCTION_CLEANUP_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  QWEN.md  README.md  RUN_NOW.md  SANADSET_HADITH_AGENT.md  START_HERE.md  STRUCTURE.md  V2_ARCHITECTURE_REPORT.md  WORKING_NOW.md  WORKING_STATUS.md  alembic.ini  build.bat  classifier_debug.txt  debug_classifier.py  debug_classifier_v2.py  debug_eval.py  debug_keywords.py  debug_keywords_output.txt  debug_matching.py  debug_output.txt  direct_test.py  download-embeddings-to-qdrant.bat  dua_test.json  eval_seerah.py  fix.py  ingest_data.bat  install.bat  (+41 more)
.code-graph/: graph.json
alembic/: env.py  script.py.mako
config/: README.md
docker/: Dockerfile.api  docker-compose.dev.yml  docker-compose.prod.yml
docs/: 00_INDEX.md  42_services_use_cases_complete.md  48_retrieval_schemas_complete.md  API_ENHANCED_FEATURES.md  BGE_M3_MIGRATION.md  BRANCH_STRATEGY.md  CODE_REVIEW_ACTION_PLAN_COMPLETE.md  CODE_REVIEW_COMPLETE_SUMMARY.md  CODE_REVIEW_FINAL_PROGRESS.md  CODE_REVIEW_PROGRESS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  DATA_DRIVEN_IMPROVEMENTS.md  DATA_IMPROVEMENTS_SUMMARY.md  DATA_UPLOAD_ANALYSIS.md  DATA_UPLOAD_STRATEGY.md  DEPLOYMENT.md  DEVELOPMENT.md  EMBEDDING_SETUP.md  FINAL_COMPLETE_SUMMARY.md  FIX_SUMMARY.md  FRONTEND.md  QUICK_UPLOAD_GUIDE.md  RAG_GUIDE.md  RAG_IMPROVEMENTS_COMPLETE_STATUS.md  RAG_IMPROVEMENTS_PROGRESS.md  README.md  STATUS.md  ULTIMATE_COMPLETE_SUMMARY.md  UPLOAD_GUIDE.md  architecture.md
frontend/: next.config.js  package.json  tailwind.config.ts
migrations/: 001_initial_schema.sql
modal/: FIX_FIQH_README.md  athar_embed_modal.py  fix_fiqh_passages.py
notebooks/: 01_embed_all_collections.ipynb  02_upload_and_embed.ipynb  COLAB_GPU_EMBEDDING_GUIDE.md  NOTEBOOK_REVIEW_AND_ACTION_PLAN.md  README.md  UPLOAD_STATUS.md  full colab notebook in detials.ipynb  google_drive_setup.md  setup_colab_env.ipynb  verify_upload.ipynb
output/: lucene_title.json
prompts/: _shared_preamble.txt  aqeedah_agent.txt  fiqh_agent.txt  general_agent.txt  hadith_agent.txt  history_agent.txt  language_agent.txt  seerah_agent.txt  tafsir_agent.txt  tazkiyah_agent.txt  usul_fiqh_agent.txt
scripts/: LuceneExtractor.java  README.md  analyze_collections.py  analyze_db.py  analyze_sanadset.py  analyze_sanadset2.py  analyze_shamela_dbs.py  analyze_system_db2.py  backup_embeddings_and_qdrant.py  build_code_graph.py  check_api.py  cli.py  compress_for_upload.py  dataset_card_readme.md  download_embeddings_and_upload_qdrant.py  embed_all_collections.py  eval_seerah.py  extract_all_lucene.bat  extract_all_lucene_pipeline.py  final_upload.py  fix_bare_except.py  fix_llm_model.py  fix_remaining_bare_except.py  generate_embeddings.py  import_azkar_db.py  ingest_and_run.py  ingest_extracted_books.py  inspect_db.py  md_to_notebook.py  prepare_datasets_for_upload.py  quick_test.py  restore_from_huggingface.py  retry_dataset_card_upload.py  seed_mvp_data.py  seed_quran_data.py  seed_quran_sample.py  seed_rag_quick.py  simple_lucene_extract.py  simple_upload.py  start_and_test.py  (+16 more)
src/: __init__.py
tests/: conftest.py  test_api.py  test_comprehensive.py  test_config_backed_agents.py  test_dua_retrieval_tool.py  test_hijri_calendar_tool.py  test_hybrid_classifier.py  (+6 more)
(+638 files in other folders)
